<resources>
    <string name="app_name">SevenBits</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_code" translatable="false">af</string>
    <string name="country_afghanistan_number" translatable="false">93</string>
    <string name="country_aland_islands_name">Åland Islands</string>
    <string name="country_aland_islands_code" translatable="false">ax</string>
    <string name="country_aland_islands_number" translatable="false">358</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_code" translatable="false">al</string>
    <string name="country_albania_number" translatable="false">355</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_code" translatable="false">dz</string>
    <string name="country_algeria_number" translatable="false">213</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_code" translatable="false">as</string>
    <string name="country_american_samoa_number" translatable="false">1684</string>
    <string name="country_andorra_name">Andorra</string>
    <string name="country_andorra_code" translatable="false">ad</string>
    <string name="country_andorra_number" translatable="false">376</string>
    <string name="country_angola_name">Angola</string>
    <string name="country_angola_code" translatable="false">ao</string>
    <string name="country_angola_number" translatable="false">244</string>
    <string name="country_anguilla_name">Anguilla</string>
    <string name="country_anguilla_code" translatable="false">ai</string>
    <string name="country_anguilla_number" translatable="false">1264</string>
    <string name="country_antarctica_name">Antarctica</string>
    <string name="country_antarctica_code" translatable="false">aq</string>
    <string name="country_antarctica_number" translatable="false">672</string>
    <string name="country_antigua_and_barbuda_name">Antigua and Barbuda</string>
    <string name="country_antigua_and_barbuda_code" translatable="false">ag</string>
    <string name="country_antigua_and_barbuda_number" translatable="false">1268</string>
    <string name="country_argentina_name">Argentina</string>
    <string name="country_argentina_code" translatable="false">ar</string>
    <string name="country_argentina_number" translatable="false">54</string>
    <string name="country_armenia_name">Armenia</string>
    <string name="country_armenia_code" translatable="false">am</string>
    <string name="country_armenia_number" translatable="false">374</string>
    <string name="country_aruba_name">Aruba</string>
    <string name="country_aruba_code" translatable="false">aw</string>
    <string name="country_aruba_number" translatable="false">297</string>
    <string name="country_australia_name">Australia</string>
    <string name="country_australia_code" translatable="false">au</string>
    <string name="country_australia_number" translatable="false">61</string>
    <string name="country_austria_name">Austria</string>
    <string name="country_austria_code" translatable="false">at</string>
    <string name="country_austria_number" translatable="false">43</string>
    <string name="country_azerbaijan_name">Azerbaijan</string>
    <string name="country_azerbaijan_code" translatable="false">az</string>
    <string name="country_azerbaijan_number" translatable="false">994</string>
    <string name="country_bahamas_name">Bahamas</string>
    <string name="country_bahamas_code" translatable="false">bs</string>
    <string name="country_bahamas_number" translatable="false">1242</string>
    <string name="country_bahrain_name">Bahrain</string>
    <string name="country_bahrain_code" translatable="false">bh</string>
    <string name="country_bahrain_number" translatable="false">973</string>
    <string name="country_bangladesh_name">Bangladesh</string>
    <string name="country_bangladesh_code" translatable="false">bd</string>
    <string name="country_bangladesh_number" translatable="false">880</string>
    <string name="country_barbados_name">Barbados</string>
    <string name="country_barbados_code" translatable="false">bb</string>
    <string name="country_barbados_number" translatable="false">1246</string>
    <string name="country_belarus_name">Belarus</string>
    <string name="country_belarus_code" translatable="false">by</string>
    <string name="country_belarus_number" translatable="false">375</string>
    <string name="country_belgium_name">Belgium</string>
    <string name="country_belgium_code" translatable="false">be</string>
    <string name="country_belgium_number" translatable="false">32</string>
    <string name="country_belize_name">Belize</string>
    <string name="country_belize_code" translatable="false">bz</string>
    <string name="country_belize_number" translatable="false">501</string>
    <string name="country_benin_name">Benin</string>
    <string name="country_benin_code" translatable="false">bj</string>
    <string name="country_benin_number" translatable="false">229</string>
    <string name="country_bermuda_name">Bermuda</string>
    <string name="country_bermuda_code" translatable="false">bm</string>
    <string name="country_bermuda_number" translatable="false">1441</string>
    <string name="country_bhutan_name">Bhutan</string>
    <string name="country_bhutan_code" translatable="false">bt</string>
    <string name="country_bhutan_number" translatable="false">975</string>
    <string name="country_bolivia_name">Bolivia</string>
    <string name="country_bolivia_code" translatable="false">bo</string>
    <string name="country_bolivia_number" translatable="false">591</string>
    <string name="country_bosnia_and_herzegovina_name">Bosnia And Herzegovina</string>
    <string name="country_bosnia_and_herzegovina_code" translatable="false">ba</string>
    <string name="country_bosnia_and_herzegovina_number" translatable="false">387</string>
    <string name="country_botswana_name">Botswana</string>
    <string name="country_botswana_code" translatable="false">bw</string>
    <string name="country_botswana_number" translatable="false">267</string>
    <string name="country_brazil_name">Brazil</string>
    <string name="country_brazil_code" translatable="false">br</string>
    <string name="country_brazil_number" translatable="false">55</string>
    <string name="country_british_indian_ocean_territory_name">British Indian Ocean Territory</string>
    <string name="country_british_indian_ocean_territory_code" translatable="false">io</string>
    <string name="country_british_indian_ocean_territory_number" translatable="false">246</string>
    <string name="country_british_virgin_islands_name">British Virgin Islands</string>
    <string name="country_british_virgin_islands_code" translatable="false">vg</string>
    <string name="country_british_virgin_islands_number" translatable="false">1284</string>
    <string name="country_brunei_darussalam_name">Brunei Darussalam</string>
    <string name="country_brunei_darussalam_code" translatable="false">bn</string>
    <string name="country_brunei_darussalam_number" translatable="false">673</string>
    <string name="country_bulgaria_name">Bulgaria</string>
    <string name="country_bulgaria_code" translatable="false">bg</string>
    <string name="country_bulgaria_number" translatable="false">359</string>
    <string name="country_burkina_faso_name">Burkina Faso</string>
    <string name="country_burkina_faso_code" translatable="false">bf</string>
    <string name="country_burkina_faso_number" translatable="false">226</string>
    <string name="country_burundi_name">Burundi</string>
    <string name="country_burundi_code" translatable="false">bi</string>
    <string name="country_burundi_number" translatable="false">257</string>
    <string name="country_cambodia_name">Cambodia</string>
    <string name="country_cambodia_code" translatable="false">kh</string>
    <string name="country_cambodia_number" translatable="false">855</string>
    <string name="country_cameroon_name">Cameroon</string>
    <string name="country_cameroon_code" translatable="false">cm</string>
    <string name="country_cameroon_number" translatable="false">237</string>
    <string name="country_canada_name">Canada</string>
    <string name="country_canada_code" translatable="false">ca</string>
    <string name="country_canada_number" translatable="false">1</string>
    <string name="country_cape_verde_name">Cape Verde</string>
    <string name="country_cape_verde_code" translatable="false">cv</string>
    <string name="country_cape_verde_number" translatable="false">238</string>
    <string name="country_cayman_islands_name">Cayman Islands</string>
    <string name="country_cayman_islands_code" translatable="false">ky</string>
    <string name="country_cayman_islands_number" translatable="false">1345</string>
    <string name="country_central_african_republic_name">Central African Republic</string>
    <string name="country_central_african_republic_code" translatable="false">cf</string>
    <string name="country_central_african_republic_number" translatable="false">236</string>
    <string name="country_chad_name">Chad</string>
    <string name="country_chad_code" translatable="false">td</string>
    <string name="country_chad_number" translatable="false">235</string>
    <string name="country_chile_name">Chile</string>
    <string name="country_chile_code" translatable="false">cl</string>
    <string name="country_chile_number" translatable="false">56</string>
    <string name="country_china_name">China</string>
    <string name="country_china_code" translatable="false">cn</string>
    <string name="country_china_number" translatable="false">86</string>
    <string name="country_christmas_island_name">Christmas Island</string>
    <string name="country_christmas_island_code" translatable="false">cx</string>
    <string name="country_christmas_island_number" translatable="false">61</string>
    <string name="country_cocos_keeling_islands_name">Cocos (keeling) Islands</string>
    <string name="country_cocos_keeling_islands_code" translatable="false">cc</string>
    <string name="country_cocos_keeling_islands_number" translatable="false">61</string>
    <string name="country_colombia_name">Colombia</string>
    <string name="country_colombia_code" translatable="false">co</string>
    <string name="country_colombia_number" translatable="false">57</string>
    <string name="country_comoros_name">Comoros</string>
    <string name="country_comoros_code" translatable="false">km</string>
    <string name="country_comoros_number" translatable="false">269</string>
    <string name="country_congo_name">Republic of the Congo</string>
    <string name="country_congo_code" translatable="false">cg</string>
    <string name="country_congo_number" translatable="false">242</string>
    <string name="country_the_democratic_republic_of_congo_name">Democratic Republic of the Congo</string>
    <string name="country_the_democratic_republic_of_congo_code" translatable="false">cd</string>
    <string name="country_the_democratic_republic_of_congo_number" translatable="false">243</string>
    <string name="country_cook_islands_name">Cook Islands</string>
    <string name="country_cook_islands_code" translatable="false">ck</string>
    <string name="country_cook_islands_number" translatable="false">682</string>
    <string name="country_code">Country Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="user_name">User Name</string>
    <string name="email">Email ID</string>
    <string name="save">Save</string>
    <string name="resend_otp">Resend OTP</string>
</resources>