<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_login_view"/>
    <LinearLayout
        android:id="@+id/ll_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/round_corner_bg"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">
    <Spinner
        android:id="@+id/sp_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_border"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">
            <TextView
                android:id="@+id/txt_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/round_border"/>
            <EditText
                android:id="@+id/edt_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:hint="@string/mobile_number"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:inputType="number" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_get_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/get_otp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>