<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.profile.UserProfileActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_Image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/user"
        app:civ_border_width="2dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:civ_border_color="@color/white"/>
    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:hint="@string/user_name"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintTop_toBottomOf="@id/user_Image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/edt_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:hint="@string/mobile_number"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edt_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:hint="@string/email"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edt_mobile_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_save_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"/>
</androidx.constraintlayout.widget.ConstraintLayout>