<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.OtpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textColor="@color/purple_700"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_login_view"/>
    <LinearLayout
        android:id="@+id/ll_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/round_corner_bg"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">
        <com.sevenbits.view.otpview.OtpView
            android:id="@+id/otpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:OtpItemCount="6"
            app:OtpItemHeight="32dp"
            app:OtpItemSpacing="10dp"
            app:OtpItemWidth="32dp"
            app:OtpState_filled="true"
            app:OtpLineColor="@color/grey"
            app:OtpViewType="line" />
        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/purple_500"/>
        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_otp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>
        <Button
            android:id="@+id/btn_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resend_otp"
            android:textSize="@dimen/_12sdp"
            android:enabled="false"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>